--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="client.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Code Challenge 1</title>
 </head>
 <body>
-    <div>
-        <button id="generateButton">Generate</button>
-    </div>
-    
+    <button id="generateButton">Generate</button>
+    <div></div>
 </body>
 </html>
